tests/rosetta/out/Smalltalk/arithmetic-derivative.out
/workspace/mochi/tests/rosetta/out/Smalltalk/arithmetic-derivative.st:34: parse error, expected integer literal or floating-point literal or decimal literal
